Add first-letter assert exception in RenderButton::setupInnerStyle(). https://bugs.webkit.org/show_bug.cgi?id=140517OB

Patch by Hyungwook Lee <hyungwook.lee@navercorp.com> on 2015-05-07
Reviewed by Darin Adler.

StyleResolver references inner block's render style temporary in
RenderBlock::styleDidChange() when we have first-letter css pseudo
element.

* rendering/RenderButton.cpp:
(WebCore::RenderButton::setupInnerStyle):

Canonical link: https://commits.webkit.org/162812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183981 268f45cc-cd09-0410-ab3c-d52691b4dbfc